--- a/actuator1/pom.xml
+++ b/actuator1/pom.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.18</version>
-    <relativePath/>
-</parent>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.7.18</version>
+		<relativePath/>
+	</parent>
 	<groupId>com.actuator</groupId>
 	<artifactId>actuator1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>actuator1</name>
 	<description>Demo project for Spring Boot</description>
-<properties>
-    <java.version>17</java.version>
-    <spring-cloud.version>2020.0.4</spring-cloud.version>
-    <spring-boot.version>2.5.0</spring-boot.version>
-</properties>
+	<properties>
+		<java.version>17</java.version>
+		<spring-cloud.version>2020.0.4</spring-cloud.version>
+		<spring-boot.version>2.5.0</spring-boot.version>
+	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
