--- a/todolist/src/main/resources/application.properties
+++ b/todolist/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# general spring settings
-spring.application.name=todo
+spring.application.name=todolist
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 server.port = 8082
@@ -7,5 +7,5 @@ server.port = 8082
 eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
 eureka.instance.statusPageUrlPath=/todolist
 spring.cloud.compatibility-verifier.enabled=false
-eureka.instance.homePageUrlPath=/todo/manage
-eureka.instance.healthCheckUrlPath=/todo/manage/health
+eureka.instance.homePageUrlPath=/todolist/manage
+eureka.instance.healthCheckUrlPath=/todolist/manage/health
